titles and description usecases in pages added

--- a/src/pages/car-dealership.astro
+++ b/src/pages/car-dealership.astro
@@ -5,7 +5,8 @@ import DealerShip from "../components/infopages/usecase/DealerShip.astro";
 ---
 
 <head>
-  <title>Usecase | DealerShip </title>
+  <title>AI Phone Agents to Boost Your Car Dealership's Growth</title>
+   <meta name="description" content="Transform your dealership with AI-driven support that engages leads, follows up on inquiries, and captures missed opportunities" />
 </head>
 
 
