--- a/src/pages/estate.astro
+++ b/src/pages/estate.astro
@@ -4,7 +4,8 @@ import RealEstate from "../components/infopages/usecase/RealEstate.astro";
 
 ---
 <head>
-  <title>Usecase | RealEstate</title>
+  <title>AI Phone Agents to Enhance Real Estate Services</title>
+   <meta name="description" content="Transform your real estate business with AI-powered virtual agents that handle 24/7 client inquiries, schedule property tours, and follow up with potential buyers." />
 </head>
 
 
