--- a/src/pages/health.astro
+++ b/src/pages/health.astro
@@ -5,7 +5,8 @@ import Health from "../components/infopages/usecase/Health.astro";
 ---
 
 <head>
-  <title>Usecase | Health </title>
+  <title>AI Phone Agents Revolutionizing Patient Care</title>
+   <meta name="description" content="Transform your healthcare services through the implementation of AI-driven virtual agents that efficiently handle patient inquiries, coordinate appointment scheduling, and oversee follow-up communications" />
 </head>
 
 <BaseLayout>
