--- a/src/pages/solar.astro
+++ b/src/pages/solar.astro
@@ -5,7 +5,8 @@ import Solar from "../components/infopages/usecase/Solar.astro";
 ---
 
 <head>
-  <title>Usecase | Solar</title>
+  <title>AI Phone Agents to Optimize Solar Energy Services</title>
+   <meta name="description" content="Transform your solar energy business by utilizing AI virtual agents that efficiently manage customer inquiries, arrange consultations, and conduct follow-ups effortlessly" />
 </head>
 
 
