--- a/src/pages/recruitment.astro
+++ b/src/pages/recruitment.astro
@@ -5,8 +5,10 @@ import Recrutiment from "../components/infopages/usecase/Recrutiment.astro";
 ---
 
 <head>
-  <title>Usecase | Recrutiment</title>
+  <title>AI Phone Agents to Optimize Recruitment Procedures</title>
+   <meta name="description" content="Revolutionize your hiring process with AI-driven virtual agents that efficiently manage candidate screening, interview arrangements, and follow-up communications" />
 </head>
+
 
 <BaseLayout>
 
