titles and description blogs in pages added

--- a/src/pages/ecommerce.astro
+++ b/src/pages/ecommerce.astro
@@ -3,9 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Ecomerece from "../components/infopages/usecase/Ecomerece.astro";
 
 ---
-
 <head>
-  <title>Usecase | Ecomerece </title>
+  <title>AI Phone Agents to Revolutionize eCommerce Support</title>
+   <meta name="description" content=" Elevate your eCommerce business with AI-powered virtual agents that handle customer inquiries, order tracking, and follow-ups effortlessly." />
 </head>
 
 
