demo call and enterprise form fuctionallity added

--- a/src/components/Forms/CallForm.astro
+++ b/src/components/Forms/CallForm.astro
@@ -28,7 +28,7 @@ import MakeCall from "../../pages/api/makeCall";
             type="text"
             id="phone"
             name="phone"
-            placeholder="123-456-7890"
+            placeholder="1-123-456-7890"
             class="mt-1 block w-full rounded-md border-gray-300 text-black shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-300"
             required
           />
