demo call and enterprise form fuctionallity added

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,8 @@
 ---
 import "../styles/global.css";
 ---
+<head>
+
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
@@ -70,3 +72,4 @@ https://rsms.me/inter/
 />
 <!---- Alpine  -->
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
+</head>
