demo call and enterprise form fuctionallity added

--- a/src/components/Forms/CallForm.astro
+++ b/src/components/Forms/CallForm.astro
@@ -101,7 +101,7 @@ import MakeCall from "../../pages/api/makeCall";
   // Ensure the API key is loaded correctly
   const API_KEY = import.meta.env.PUBLIC_VAPI_PIVATE_KEY || 'e16cd240-255c-493e-a1d1-b4ed6b87a1c9';
   const PHONE_KEY = import.meta.env.PUBLIC_VAPI_PHONE_KEY || '0a611369-cbf4-4005-ac61-288399e2dce3';
-  // console.log("Phone_KEY", PHONE_KEY);
+  console.log("Phone_KEY", PHONE_KEY);
   // console.log("API_KEY", API_KEY);
 
   document
