Chnages to pricing

--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -79,7 +79,7 @@
             name="checkmark-outline"
             role="img"
             aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              250 min/month </span
+              50 min/month </span
           >
         </li>
           <li class="flex items-center">
@@ -156,7 +156,7 @@
             name="checkmark-outline"
             role="img"
             aria-label="checkmark outline"></ion-icon><span class="ml-4"
-            >1,000 min/month </span
+            >140 min/month </span
           >
         </li>
           <li class="flex items-center">
@@ -241,7 +241,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >4,000 min/month</span
+              >1500 min/month</span
             >
           </li>
           <li class="flex items-center">
@@ -322,7 +322,7 @@
             <h1 class="text-2xl font-semibold">Enterprise Plan</h1>
             <div class="max-w-md mt-2">
               <p class="text-sm text-gray-300">
-                For businesses needing top performance, scalability, and support.
+                For businesses which need top performance, scalability, and support.
               </p>
             </div>
           </div>
