changing text landing page

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -48,14 +48,14 @@ import VoiceAIButton from '../infopages/VoiceAIButton.astro'
       <div class="text-gray-500">
         <strong class="text-gray-700"
           >24/7 AI Receptionist</strong
-        > ━ Manage inbound calls with an AI receptionist that greets, answers questions, and forwards calls to right person
+        > ━ Manage inbound calls with an AI receptionist
       </div>
       <div class="text-gray-500">
         <strong class="text-gray-700">AI Answering Service</strong> ━ Get an Answering service
-        which can answer all your customer questions, trained on your data, and self improving
+        which answers all your customer questions
       </div>
       <div class="text-gray-500">
-        <strong class="text-gray-700">AI Outbound calls</strong> ━ Boost lead generation with AI-driven outbound calls that qualify prospects, collect key details, and schedule follow-ups.
+        <strong class="text-gray-700">AI Outbound calls</strong> ━ Generate leads, Qualify prospects, collect key details, and schedule follow-ups.
 
       </div>
     </dl>
