--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -48,12 +48,10 @@ import VoiceAIButton from '../infopages/VoiceAIButton.astro'
       <div class="text-gray-500">
         <strong class="text-gray-700"
           >24/7 AI Receptionist</strong
-        > ━ Manage inbound calls with an AI receptionist
+        > ━ Manage inbound calls 
       </div>
       <div class="text-gray-500">
-        <strong class="text-gray-700">AI Answering Service</strong> ━ Get an Answering service
-        which answers all your customer questions
-      </div>
+        <strong class="text-gray-700">AI Answering Service</strong> ━ Answer all your customer questions <div>
       <div class="text-gray-500">
         <strong class="text-gray-700">AI Outbound calls</strong> ━ Generate leads, Qualify prospects, collect key details, and schedule follow-ups.
 
