restaurant in navigation added

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -58,6 +58,7 @@
              @mouseleave="useCaseOpen = false"
             class="absolute left-0 mt- w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10"
             x-cloak>
+            <a href="/restaurant" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Restaurant</a>
             <a href="/ecommerce" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Ecommerce</a>
             <a href="/estate" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Real Estate</a>
             <a href="/recruitment" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Recruitment</a>
