--- a/src/components/infopages/usecase/Ecommerce.astro
+++ b/src/components/infopages/usecase/Ecommerce.astro
@@ -6,7 +6,7 @@
       <!-- Left Section -->
       <div>
         <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display  mb-8">
-          AI Phone Agents to Revolutionize eCommerce Support
+          AI Phone Agents to Revolutionize Ecommerce Support
         </p>
         <p class="mb-6 text-lg text-gray-500">
           Elevate your eCommerce business with AI-powered virtual agents that
