--- a/src/components/infopages/usecase/Ecommerce.astro
+++ b/src/components/infopages/usecase/Ecommerce.astro
@@ -6,10 +6,10 @@
       <!-- Left Section -->
       <div>
         <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display  mb-8">
-          AI Phone Agents to Revolutionize Ecommerce Support
+          AI Phone Agents for your Ecommerce Support
         </p>
         <p class="mb-6 text-lg text-gray-500">
-          Elevate your eCommerce business with AI-powered virtual agents that
+          Elevate your Ecommerce business with AI-powered virtual agents that
           handle customer inquiries, order tracking, and follow-ups effortlessly.
           Provide an exceptional shopping experience and increase conversions
           in just three easy steps:
@@ -26,12 +26,10 @@
         class="rounded-3xl bg-gray-50 p-8 rounded-lg  max-w-sm mx-auto"
       >
         <h2 class="text-xl font-bold text-black mb-6">
-          Experience AI for eCommerce Success
+          Receive a live call from our agent
         </h2>
         <p class="text-sm text-black mb-6">
-          Fill in your details below to experience how our AI agent can assist
-          in managing customer communication, boosting sales, and improving
-          customer satisfaction.
+          Fill in your details below to get AI call from our generic Agent
         </p>
         <form class="space-y-6">
           <!-- Name Field -->
@@ -335,10 +333,10 @@
      <div>
       <h3 class="text-sm font-semibold text-accent-500 uppercase">Secured & Efficient</h3>
       <h2 class="text-4xl font-bold mt-2">
-        Our Assistants for <span class="text-accent-500">Recruitment</span> in numbers
+        Our Assistants for <span class="text-accent-500">Ecommerce</span> in numbers
       </h2>
       <p class="text-gray-600 mt-4 max-w-xl">
-        Streamline recruitment with AI, from interview scheduling to pre-screening candidates, while receiving real-time support to optimize your workflow.
+        Streamline ecommerce with AI, from customer support, order tracking, product upsells.
       </p>
      </div>
   
@@ -348,23 +346,23 @@
       <!-- Stat 1 -->
       <div class="text-center">
         <p class="text-6xl font-bold text-gray-900">
-          45<span class="text-accent-500">%</span>
+          37%<span class="text-accent-500">%</span>
         </p>
-        <p class="mt-2 text-gray-700 text-base">Reduction in Time-To-Hire</p>
+        <p class="mt-2 text-gray-700 text-base">Increase in Revenue</p>
       </div>
       <!-- Stat 2 -->
       <div class="text-center">
         <p class="text-6xl font-bold text-gray-900">
           50<span class="text-accent-500">%</span>
         </p>
-        <p class="mt-2 text-gray-700 text-base">Decrease in Average Interview Scheduling Time</p>
+        <p class="mt-2 text-gray-700 text-base">Less Returns</p>
       </div>
       <!-- Stat 3 -->
       <div class="text-center">
         <p class="text-6xl font-bold text-gray-900">
-          65<span class="text-accent-500">%</span>
+          80%<span class="text-accent-500">%</span>
         </p>
-        <p class="mt-2 text-gray-700 text-base">Cost Saving on the Initial Screening Process</p>
+        <p class="mt-2 text-gray-700 text-base">Cost Saving on Customer Support</p>
       </div>
     </div>
   </div>
@@ -691,7 +689,6 @@
     </ul>
   </div>
 </section>
-
 
 
 <!-- Faq Section -->
