--- a/src/components/infopages/usecase/Restaurant.astro
+++ b/src/components/infopages/usecase/Restaurant.astro
@@ -6,13 +6,10 @@
       <!-- Left Section -->
       <div>
         <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display  mb-8">
-          AI Phone Agents to Revolutionize eCommerce Support
+          AI Phone Agents for your Restaurant
         </p>
         <p class="mb-6 text-lg text-gray-500">
-          Elevate your eCommerce business with AI-powered virtual agents that
-          handle customer inquiries, order tracking, and follow-ups effortlessly.
-          Provide an exceptional shopping experience and increase conversions
-          in just three easy steps:
+          AI Receptionist for your restaurant to make reservations. 
         </p>
         <ul class="list-decimal list-inside space-y-2 text-lg text-gray-500">
           <li>Activate your AI-powered phone agent.</li>
