--- a/src/components/infopages/usecase/Health.astro
+++ b/src/components/infopages/usecase/Health.astro
@@ -6,7 +6,7 @@
       <!-- Left Section -->
       <div>
         <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display  mb-8">
-          AI Phone Agents to Transform Patient Care
+          AI Phone Agents in Health Care
         </p>
         <p class="mb-6 text-lg text-gray-500">
           Revolutionize your healthcare services with AI-powered virtual agents
