Changint he form

--- a/src/components/infopages/usecase/Health.astro
+++ b/src/components/infopages/usecase/Health.astro
@@ -26,11 +26,10 @@
         class="rounded-3xl bg-gray-50 p-8  shadow-lg max-w-sm mx-auto"
       >
         <h2 class="text-xl font-bold text-black mb-6">
-          Experience AI for Patient Support
+          Receive a live call from our agent
         </h2>
         <p class="text-sm text-black mb-6">
-          Fill in your details below to experience how our AI agent can assist
-          in managing patient communication effectively.
+          Fill in your details below to get AI call from our generic Agent
         </p>
         <form class="space-y-6">
           <!-- Name Field -->
