--- a/src/components/infopages/usecase/Restaurant.astro
+++ b/src/components/infopages/usecase/Restaurant.astro
@@ -23,12 +23,10 @@
         class="rounded-3xl bg-gray-50 p-8 rounded-lg  max-w-sm mx-auto"
       >
         <h2 class="text-xl font-bold text-black mb-6">
-          Experience AI for eCommerce Success
+          Receive a live call from our agent
         </h2>
         <p class="text-sm text-black mb-6">
-          Fill in your details below to experience how our AI agent can assist
-          in managing customer communication, boosting sales, and improving
-          customer satisfaction.
+          Fill in your details below to get AI call from our generic Agent
         </p>
         <form class="space-y-6">
           <!-- Name Field -->
