--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -1,7 +1,7 @@
 ---
 import Pricing from '../../landing/Pricing.astro'
 ---
-<div class="bg-gray-50 max-w-6xl mx-auto  justify-center text-gray-800">
+<div class="bg-white max-w-6xl mx-auto  justify-center text-gray-800">
     <!-- Hero Section -->
     <div class="hero-section bg-black text-white text-center py-16 px-4 relative">
       <!-- Background Image -->
@@ -52,7 +52,7 @@ import Pricing from '../../landing/Pricing.astro'
     </div>
   
         <!-- Discover Section -->
-    <section class="py-16 bg-gray-50">
+    <section class="py-16 bg-white">
       <div class="container mx-auto px-4 text-center">
         <h2 class="text-3xl font-bold text-gray-800 mb-8">Discover What Businesses Are Building with CallSupport</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -112,7 +112,7 @@ import Pricing from '../../landing/Pricing.astro'
           <!-- Card 1 -->
           <div class="bg-gray-50 rounded-lg p-6 text-center">
             <div class="mb-4">
-              <img src="/images/Industry/restaurant.svg" alt="Fintech AI Icon" class="h-30 w-30 mx-auto">
+              <img src="/images/Industry/ecommerce.svg" alt="CallSupport Ai AI Icon" class="h-30 w-30 mx-auto">
             </div>
             <h3 class="text-black font-bold text-lg">CallSupport AI For Ecommerce</h3>
           </div>
@@ -165,6 +165,7 @@ import Pricing from '../../landing/Pricing.astro'
 <!-- Pricing Section -->
 <Pricing />
 
+<!-- FaQ Section -->
 <section>
     <div
       class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
