--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,93 +1,99 @@
 ---
-import VoiceAIButton from '../infopages/VoiceAIButton.astro'
-
+import VoiceAIButton from "../infopages/VoiceAIButton.astro";
 ---
+
 <section>
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
+  >
     <div class="text-center max-w-4xl mx-auto">
       <div class="sm:flex sm:justify-center">
         <div
-          class="relative rounded-full py-1 px-3 mb-4 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+          class="relative rounded-full py-1 px-3 mb-4 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20"
+        >
           <a
             href="https://app.callsupport.ai/"
             class="font-semibold text-accent-600"
             ><span class="absolute inset-0" aria-hidden="true"></span>
             <span class="block lg:inline">
-              AI voice agents at scale <span aria-hidden="true"
-                >&rarr;</span
-              >
+              AI voice agents at scale <span aria-hidden="true">&rarr;</span>
             </span>
           </a>
         </div>
       </div>
       <p
-        class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
+        class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8"
+      >
         AI Phone Calls just like Humans
       </p>
       <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
         Automate all your phone calls with AI
       </p>
     </div>
-    <VoiceAIButton  />
+    <VoiceAIButton />
     <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
       <a
-      class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
-      href="https://zcal.co/i/cL7eACvt"
-      target="_blank" 
-      rel="noopener noreferrer"
-    >Contact Sales</a>
+        class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
+        href="https://zcal.co/i/cL7eACvt"
+        target="_blank"
+        rel="noopener noreferrer">Contact Sales</a
+      >
       <a
         class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
         href="https://app.callsupport.ai/"
-        >Create free account now  &nbsp; &rarr;
+        >Create free account now &nbsp; &rarr;
       </a>
     </div>
     <dl
-      class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
+      class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start"
+    >
       <div class="text-gray-500">
-        <strong class="text-gray-700"
-          >24/7 AI Receptionist</strong
-        > ━ Manage inbound calls 
+        <strong class="text-gray-700">24/7 AI Receptionist</strong> ━ Manage inbound
+        calls
       </div>
+      
       <div class="text-gray-500">
-        <strong class="text-gray-700">AI Answering Service</strong> ━ Answer all your customer questions <div>
-      <div class="text-gray-500">
-        <strong class="text-gray-700">AI Outbound calls</strong> ━ Generate leads, Qualify prospects, collect key details, and schedule follow-ups.
+        <strong class="text-gray-700">AI Answering Service</strong> ━ Answer all
+        your customer questions </div>
+          <div class="text-gray-500">
+            <strong class="text-gray-700">AI Outbound calls</strong> ━ Generate leads,
+            Qualify prospects, collect key details, and schedule follow-ups.
+          </div>
+        </div>
 
-      </div>
-    </dl>
-
-    <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
-      <!-- <div class="bg-gray-100 p-8 rounded-3xl"> -->
-        <!-- <VoiceAIButton /> -->
-        <!-- <img
+        <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
+          <!-- <div class="bg-gray-100 p-8 rounded-3xl"> -->
+          <!-- <VoiceAIButton /> -->
+          <!-- <img
           alt="#_"
           class="relative w-full border border-gray-200 lg:rounded-2xl object-cover rounded shadow-2xl"
           src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
         /> -->
 
-      <!-- </div> -->
-    <!-- </div> -->
-    <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Figma.svg" />
+          <!-- </div> -->
+          <!-- </div> -->
+          <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
+            <div class="flex justify-center col-span-1">
+              <img alt="logo" class="h-8" src="/Figma.svg" />
+            </div>
+            <div class="flex justify-center col-span-1">
+              <img alt="logo" class="h-8" src="/Canva.svg" />
+            </div>
+            <div class="flex justify-center col-span-1">
+              <img alt="logo" class="h-8" src="/Stripe.svg" />
+            </div>
+            <div class="flex justify-center col-span-1">
+              <img alt="logo" class="h-8" src="/Gitlab.svg" />
+            </div>
+            <div class="flex justify-center col-span-1">
+              <img alt="logo" class="h-8" src="/Linear.svg" />
+            </div>
+            <div class="flex justify-center col-span-1">
+              <img alt="logo" class="h-8" src="/Gumroad.svg" />
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Canva.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Stripe.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Gitlab.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Linear.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Gumroad.svg" />
-      </div>
-    </div>
+    </dl>
   </div>
 </section>
