--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -32,56 +32,56 @@ const blogs = [
     id: 5,
     title: "How to Leverage AI for Better E-commerce Sales",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/blog5.jpeg",
     link: "/How-to-Leverage-AI-for-Better-E-commerce-Sales",
   },
   {
     id: 6,
     title: "5 Key Benefits of AI Receptionist Prompting Technology",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/blog6.jpeg",
     link: "/5-Key-Benefits-of-AI-Receptionist-Prompting-Technology",
   },
   {
     id: 7,
     title: "A Dive into AI Receptionists – Your Help at the Front Desk",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/adiveinto.png",
     link: "/A-Dive-into-AI-Receptionists-Your-Help-at-the-Front-Desk",
   },
   {
     id: 8,
     title: "Can Human Receptionists Be Replaced by AI Receptionists?",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/humanrecepionist.png",
     link: "/Can-Human-Receptionists-Be-Replaced-by-AI-Receptionists",
   },
   {
     id: 9,
     title: "AI Receptionist Prompting: How PixEla Revolutionizes Customer Interaction",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/blog9.png",
     link: "/AI-Receptionist-Prompting-How-PixEla-Revolutionizes-Customer-Interaction",
   },
   {
     id: 10,
     title: " Can AI Answer Phone Calls for Me?",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/blog10.png",
     link: "/Can-AI-Answer-Phone-Calls-for-Me",
   },
   {
     id: 11,
     title: "Which AI is Best for Answering Questions",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/blog11.png",
     link: "/Which-AI-is-Best-for-Answering-Questions",
   },
   {
     id: 12,
     title: "What Is he Hardest Question to Ask AI?",
     description: "Explore how AI tools can boost your sales strategy.",
-    image: "https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75",
+    image: "/images/Blogs/blog12.png",
     link: "/What-Is-he-Hardest-Question-to-Ask-AI",
   },
 
