--- a/src/components/infopages/usecase/Ecommerce.astro
+++ b/src/components/infopages/usecase/Ecommerce.astro
@@ -1,3 +1,7 @@
+---
+import CallForm from '../../Forms/CallForm.astro'
+---
+
 <section
   class="bg-gradient-to-br from-[#ffffff] to-[#ffffffde] text-black py-16"
 >
@@ -22,61 +26,8 @@
       </div>
       <!-- Right Section -->
 
-      <div
-        class="rounded-3xl bg-gray-50 p-8 rounded-lg  max-w-sm mx-auto"
-      >
-        <h2 class="text-xl font-bold text-black mb-6">
-          Receive a live call from our agent
-        </h2>
-        <p class="text-sm text-black mb-6">
-          Fill in your details below to get AI call from our generic Agent
-        </p>
-        <form class="space-y-6">
-          <!-- Name Field -->
-          <div>
-            <label class="block text-sm text-black mb-2" for="name"
-              >Enter Your Name</label
-            >
-            <input
-              id="name"
-              type="text"
-              class="w-full px-4 py-3 bg-white text-black rounded-lg focus:outline-none focus:ring-2 focus:ring-black placeholder-gray-500"
-              placeholder="John Doe"
-            />
-          </div>
-          <!-- Email Field -->
-          <div>
-            <label class="block text-sm text-black mb-2" for="email"
-              >Your Email</label
-            >
-            <input
-              id="email"
-              type="email"
-              class="w-full px-4 py-3 bg-white text-black rounded-lg focus:outline-none focus:ring-2 focus:ring-black placeholder-gray-500"
-              placeholder="john.doe@ecommerce.com"
-            />
-          </div>
-          <!-- Phone Number Field -->
-          <div>
-            <label class="block text-sm text-black mb-2" for="phone"
-              >Your Phone Number (With Country Code)</label
-            >
-            <input
-              id="phone"
-              type="tel"
-              class="w-full px-4 py-3 bg-white text-black rounded-lg focus:outline-none focus:ring-2 focus:ring-black placeholder-gray-500"
-              placeholder="+1 987 654 3210"
-            />
-          </div>
-          <!-- Submit Button -->
-          <button
-          type="submit"
-          class="w-full h-10 bg-gradient-to-r items-center justify-center focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black px-6 py-3 text-center text-white rounded-lg transition duration-300 shadow-lg"
-        >
-          Try a Live Phone Demo
-        </button>
-        </form>
-      </div>
+     
+  <CallForm />
     </div>
   </div>
   <!-- Audio Player -->
