--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -32,8 +32,8 @@
       <nav
         :class="{'flex': open, 'hidden': !open}"
         class="flex-col items-center flex-grow hidden md:pb-0 md:flex md:justify-end md:flex-row">
-        <div x-data="{ productOpen: false }" class="relative">
-          <!-- Dropdown Trigger -->
+        <!-- <div x-data="{ productOpen: false }" class="relative">
+          
           <button
             @mouseover="productOpen = true" 
             @mouseleave="productOpen = false"
@@ -49,7 +49,7 @@
             </svg>
           </button>
         
-          <!-- Dropdown Menu -->
+     
           <div
             x-show="productOpen"
             @mouseover="productOpen = true" 
@@ -66,14 +66,9 @@
               AI Concierge 
             </a>
             
-            <!-- Uncomment for additional menu items -->
-            <!--
-            <a href="/estate" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">
-              Real Estate
-            </a>
-            -->
+          
           </div>
-        </div>
+        </div> -->
         
         <!-- <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400 lg:ml-auto"
